# Claude-Science-Container

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.api-bridge  Dockerfile.claude-science  README.md  docker-compose.yml  opencode.json  pixi.toml  pyproject.toml
.github/workflows/: build.yml
helper/: config.example.json  config.go  go.mod  main.go  ssh.go  versioninfo.json
scripts/: docker-entrypoint-bridge.sh  docker-entrypoint-cs.sh  docker-entrypoint.sh  setup-token.py  supervisord.conf  trim-install-safe.py
scripts/patches/: 0001-strip-thinking-block.patch
