[project]
authors = [{name = "Sylens Wong", email = "qiumin14@163.com"}]
dependencies = []
name = "Claude-Science-Container"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda", "https://prefix.dev/sylens"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
claude_science_container = { path = ".", editable = true }

[tool.pixi.tasks]
build-helper = { cmd = "CGO_ENABLED=0 go build -o launcher .", cwd = "helper" }
run-helper = { cmd = "CGO_ENABLED=0 go run .", cwd = "helper" }
tidy-helper = { cmd = "go mod tidy", cwd = "helper" }
vet-helper = { cmd = "CGO_ENABLED=0 go vet .", cwd = "helper" }

[tool.pixi.dependencies]
go = ">=1.26.4,<2"
